# CleverHaskell

./: CleverHaskell.cabal  README.md
src/: Main.hs
