name:                CleverHaskell
version:             0.1.0.0
synopsis:            Clever application challenge in Haskell
homepage:            github.com/ncpierson
author:              Nick Pierson
maintainer:          nick.c.pierson@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable CleverHaskell
  ghc-options:         -Wall
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base ==4.6.*,
                       http-conduit
